swap widgets and fixed spacing

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,6 +1,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .contact-header {
+    text-align: center;
     margin-left: 1rem;
     @include tablet {
         text-align: center;
@@ -17,6 +18,8 @@
     flex-direction: column;
     gap: 1rem;
     padding: 0 1rem 1rem 1rem;
+    align-items: center;
+    text-align: center;
     @include tablet {
         font-size: 2rem;
         align-items: center;
@@ -45,6 +48,7 @@
     &__tablet {
         display: flex;
         flex-direction: column;
+        align-items: center;
         @include tablet {
             display: flex;
             flex-direction: column;
@@ -64,6 +68,8 @@
     &__socials-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        margin-top: 1rem;
         @include tablet {
             align-items: center;
             justify-self: center;
@@ -85,7 +91,7 @@
         background-color: #efefef;
         width: 40%;
         text-align: center;
-        margin-top: 1rem;
+        margin-top: 0.4rem;
         border: 1px solid black;
         @include button;
         @include tablet {
