--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -20,7 +20,7 @@
 
   &-banner {
     width: 100%;
-    height: 53vh;
+    height: 45vh;
     object-fit: cover;
     @include tablet {
       width: 70%;
